# MultiMode-Filter

./: .gitignore  CMakeLists.txt  MyAwesomePlugin.jucer  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Release/Frankys-Filters-v1.0.0/: INSTALL.txt  LICENSE.txt
Release/Frankys-Filters-v1.0.0/AU/Franky's Filters.component/Contents/: Info.plist
Release/Frankys-Filters-v1.0.0/Documentation/: README.md
Release/Frankys-Filters-v1.0.0/VST3/Franky's Filters.vst3/Contents/: Info.plist
Release/Frankys-Filters-v1.0.0/VST3/Franky's Filters.vst3/Contents/Resources/: moduleinfo.json
Release/Frankys-Filters-v1.0.0/VST3/Franky's Filters.vst3/Contents/_CodeSignature/: CodeResources
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: preset_functionality_test.cpp  slope_switching_test.cpp  twelve_db_filter_test.cpp  twentyfour_db_filter_test.cpp
